authentication providers cleanup